# manta

./: .gitignore  Dockerfile  README.md  docker-compose.yml
config/: params.yaml
demo/: server.py
docker/: entrypoint.sh
launch/: full_system.launch.py
src/manta_comms/: package.xml  setup.cfg  setup.py
src/manta_comms/manta_comms/nodes/: comms_node.py
src/manta_compression/: package.xml  setup.cfg  setup.py
src/manta_compression/manta_compression/: __init__.py  formatter.py  scorers.py  triage.py
src/manta_compression/manta_compression/nodes/: compression_node.py
src/manta_compression/test/: test_triage.py
src/manta_gateway/: package.xml  setup.cfg  setup.py
src/manta_gateway/nodes/: gateway_node.py
src/manta_interfaces/: CMakeLists.txt  package.xml
src/manta_interfaces/msg/: ActorBelief.msg  ActorObservation.msg  DiverAlert.msg  TaskContext.msg  WorldState.msg
src/manta_sim/: package.xml  setup.cfg  setup.py
src/manta_sim/manta_sim/nodes/: diver_sim.py  explosive_sim.py  vessel_sim.py
src/manta_sim/nodes/: shark_sim.py
src/manta_world_model/: package.xml  setup.cfg  setup.py
src/manta_world_model/manta_world_model/: __init__.py  actor.py  intent.py  motion_models.py  tracker.py
src/manta_world_model/manta_world_model/nodes/: world_model_node.py
src/manta_world_model/test/: test_tracker.py
