<?xml version="1.0"?>
<package format="3">
  <name>manta_compression</name>
  <version>0.1.0</version>
  <description>Semantic compression library: scores, triages, and formats world-model actors for bandwidth-constrained push to a focused actor</description>
  <maintainer email="dev@example.com">Manta Dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>manta_interfaces</depend>
  <depend>manta_world_model</depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
