<?xml version="1.0"?>
<package format="3">
  <name>manta_gateway</name>
  <version>0.1.0</version>
  <description>Gateway node: normalizes external reports and applies latency/packet-loss simulation</description>
  <maintainer email="dev@example.com">Manta Dev</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>manta_interfaces</depend>
  <export><build_type>ament_python</build_type></export>
</package>
