<?xml version="1.0"?>
<package format="3">
  <name>manta_sim</name>
  <version>0.1.0</version>
  <description>Simulation nodes for Manta: diver, shark, explosive, vessel</description>
  <maintainer email="dev@example.com">Manta Dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>manta_interfaces</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
